--- a/employee/src/signup.css
+++ b/employee/src/signup.css
@@ -10,7 +10,7 @@ background-image: linear-gradient(160deg, #126ded 0%, #bcf1eb 100%);
 }
  
 .signUp{
-    /* border: 5px solid gray; */
+    border: 5px solid gray;
     display: flex;
     flex-direction: column;
     margin-left: 30px;
